# pipes

./: .gitignore  README.txt
cpp/: CMakeLists.txt  boilerplate.cpp  cmaketut.h.in
cpp/source/: .Camfeed.cpp.swp  .Camfeed.h.swp  .pipes.cpp.swp  :wq  CMakeLists.txt  Camfeed.cpp  Camfeed.h  TestClass.cpp  TestClass.h  boilerplate.cpp  boilerplate.h  bounding_boxes.cpp  pipes.cpp  pipes_detNet.cpp  start.cpp  start.h  stream_objects.cpp
